menu-click in cursor info Status Bar will show offset

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -275,7 +275,6 @@ BEGIN
 		MENUITEM "&Copy",                            IDM_EDIT_COPY
 		MENUITEM "&Paste",                           IDM_EDIT_PASTE
 		MENUITEM "&Delete",                          IDM_EDIT_DELETE
-		MENUITEM "Select A&ll",                      IDM_EDIT_SELECTALL
 		MENUITEM "Begin/End Select",                 IDM_EDIT_BEGINENDSELECT
 		MENUITEM SEPARATOR
 		POPUP "Copy to Clipboard"
@@ -386,8 +385,8 @@ BEGIN
 	BEGIN
 		MENUITEM "Find/Replace",                 IDM_SEARCH_REPLACE
 		MENUITEM "Find/Replace in Files",            IDM_SEARCH_FINDINFILES
-		MENUITEM "Find &Next",                  IDM_SEARCH_FINDNEXT
 		MENUITEM "Find &Previous",              IDM_SEARCH_FINDPREV
+		MENUITEM "Find &Next",                  IDM_SEARCH_FINDNEXT
 		MENUITEM "Replace Only ",              IDM_SEARCH_REPLACE1
 		MENUITEM "Find (Volatile) Next",        IDM_SEARCH_VOLATILE_FINDNEXT
 		MENUITEM "Find (Volatile) Previous",    IDM_SEARCH_VOLATILE_FINDPREV
@@ -413,8 +412,8 @@ BEGIN
 		MENUITEM SEPARATOR
 		MENUITEM "&Go to...",                   IDM_SEARCH_GOTOLINE
 		MENUITEM "Go to the Matching Brace",        IDM_SEARCH_GOTOMATCHINGBRACE
-		MENUITEM "Select in Braces Pair Inclusively", IDM_SEARCH_SELECTMATCHINGBRACES
-		MENUITEM "Select in Braces Pair Exclusively", IDM_SEARCH_SELECTMATCHBRACEX
+		MENUITEM "Select in Brace Pair Inclusively", IDM_SEARCH_SELECTMATCHINGBRACES
+		MENUITEM "Select in Brace Pair Exclusively", IDM_SEARCH_SELECTMATCHBRACEX
 		MENUITEM SEPARATOR
 		MENUITEM "Mar&k...",                    IDM_SEARCH_MARK
 
@@ -958,6 +957,9 @@ BEGIN
 				MENUITEM "Generate from files...", IDM_TOOL_SHA256_GENERATEFROMFILE
 				MENUITEM "Generate from selection into clipboard", IDM_TOOL_SHA256_GENERATEINTOCLIPBOARD
 		END
+		
+		// MENUITEM "Adjust Key press rate", IDM_TOOL_KEYR
+
 	END
 		
 	POPUP "Macro"
@@ -1015,30 +1017,28 @@ FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
 BEGIN
 	EDITTEXT        IDC_BUILD_DATETIME,150,2,150,10, ES_READONLY | NOT WS_BORDER
 	CONTROL         "",IDI_CHAMELEON,"Static",SS_OWNERDRAW,20,5,64,64
-	//CONTROL         "",IDI_JESUISCHARLIE,"Static",SS_OWNERDRAW,20,5,64,64
-	//CONTROL         "",IDI_GILETJAUNE,"Static",SS_OWNERDRAW,20,5,64,64
-	//CONTROL         "", IDI_SAMESEXMARRIAGE,"Static",SS_OWNERDRAW,20,5,64,64
 	LTEXT           NOTEPAD_PLUS_VERSION, IDC_STATIC,70,20,140,11
 	LTEXT           "bit",IDC_VERSION_BIT,205,20,135,11
 	//LTEXT           "Author :",IDC_STATIC,21,45,31,8
 	//LTEXT           "FREE UYGHUR",IDC_AUTHOR_NAME,70,32,70,8
-	LTEXT           "Home:",IDC_STATIC,21,52,47,8
-	LTEXT           "https://notepad-plus-plus.org/",IDC_HOME_ADDR,50,52,126,8
+	// LTEXT           "Home:",IDC_STATIC,21,52,47,8
+	// LTEXT           "https://notepad-plus-plus.org/",IDC_HOME_ADDR,50,52,126,8
 	GROUPBOX        "GNU General Public Licence",IDC_STATIC,19,75,231,131,BS_CENTER
 	DEFPUSHBUTTON   "OK",IDOK,106,215,50,14,BS_FLAT
 	// IDC_LICENCE_EDIT should be the last line, don't know why
 	EDITTEXT        IDC_LICENCE_EDIT,31,99,209,96,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | NOT WS_BORDER | WS_VSCROLL
 END
 
-IDD_DEBUGINFOBOX DIALOGEX 0, 0, 271, 200
+IDD_DEBUGINFOBOX DIALOGEX 0, 0, 250, 176
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_WINDOWEDGE
 CAPTION "Debug Info"
-FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
+FONT 10, TEXT("MS Shell Dlg"), 0, 0, 0x1
 BEGIN
-	EDITTEXT        IDC_DEBUGINFO_EDIT,31,20,220,96,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | NOT WS_BORDER | WS_VSCROLL
-	LTEXT           "Copy debug info into clipboard",IDC_DEBUGINFO_COPYLINK,31,120,126,8
-	DEFPUSHBUTTON   "OK",IDOK,106,160,50,14,BS_FLAT
+	LTEXT           "Copy debug info into clipboard",IDC_DEBUGINFO_COPYLINK,17,112,126,8
+	DEFPUSHBUTTON   "OK",IDOK,106,138,40,11,BS_FLAT
+	// EDITTEXT should be the last line, don't know why
+	EDITTEXT        IDC_DEBUGINFO_EDIT,17,13,220,96,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | NOT WS_BORDER | WS_VSCROLL
 END
 
 IDD_DOSAVEORNOTBOX DIALOGEX 0, 0, 310, 80
