--- a/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
+++ b/PowerEditor/src/ScitillaComponent/FindReplaceDlg.rc
@@ -37,63 +37,63 @@ EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Replace"
 FONT 9, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    RTEXT           "&Find",IDFINDWHAT_STATIC,1,14,13,8
-    COMBOBOX        IDFINDWHAT,15,13,287,214,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,30,25,8
-    COMBOBOX        IDREPLACEWITH,26,28,199,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    RTEXT           "Filter",IDD_FINDINFILES_FILTERS_STATIC,1,45,15,10,SS_NOTIFY
-    COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,16,43,161,114,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    LTEXT           "At:",IDD_FINDINFILES_DIR_STATIC,1,59,10,8
-    COMBOBOX        IDD_FINDINFILES_DIR_COMBO,10,57,337,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
-    PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,57,10,12
-    CONTROL         "In working dir.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,73,57,9
-    CONTROL         "In all sub&-dir.",IDD_FINDINFILES_RECURSIVE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,85,51,8
-    CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,96,41,9
-    CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,50,57,13
-    CONTROL         "Purge first",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,50,44,11
-    PUSHBUTTON      "Mark All",IDCMARKALL,309,12,47,12
-    PUSHBUTTON      "Clear All",IDC_CLEAR_ALL,309,25,47,12
-    CONTROL         "Backward",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,62,43,13
-    CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,69,11
-    CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,87,76,48,11
-    CONTROL         "&Wrap over",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,87,63,53,11
-    GROUPBOX        "Mode",IDC_MODE_STATIC,2,91,147,29
-    CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,25,98,35,8
-    CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,64,98,83,8
-    CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,109,74,9
-    CONTROL         "&Dot matches all",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,109,64,9
-    CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,2,8,8
-    PUSHBUTTON      "Find Next",IDOK,307,12,50,12,WS_GROUP
-    PUSHBUTTON      "",IDC_FINDPREV,343,12,15,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "",IDC_FINDNEXT,307,12,36,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "Replace &only",IDREPLACE1,307,26,51,12
-    PUSHBUTTON      "Replace t&hen find",IDREPLACE_FINDNEXT,297,38,61,12,BS_MULTILINE
-    CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,147,76,47,9
-    PUSHBUTTON      "Sum&/count",IDCCOUNTALL,154,94,40,11
-    PUSHBUTTON      "Clear=>",IDC_CLEAR_FINDALL_CURRENTFILE,219,59,30,10
-    PUSHBUTTON      "Find &All",IDC_FINDALL_CURRENTFILE,249,59,44,10,BS_MULTILINE
-    PUSHBUTTON      "Clear&=>",IDC_CLEAR_FINDALL_OPENEDFILES,219,69,30,10
-    PUSHBUTTON      "F&ind All in All Opened Documents",IDC_FINDALL_OPENEDFILES,249,69,44,26,BS_MULTILINE
-    PUSHBUTTON      "Re&place All",IDREPLACEALL,296,50,33,19,BS_MULTILINE
-    PUSHBUTTON      "=>  Sa&ve",IDREPLACEALL_SAVE,329,50,29,19,BS_MULTILINE
-    PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,296,69,62,26,BS_MULTILINE
-    PUSHBUTTON      "Clear&;",IDD_FINDINFILES_CLEAR_FIND,326,12,32,10,BS_MULTILINE
-    PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,326,23,32,12,BS_MULTILINE | WS_GROUP
-    PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,326,36,32,19,BS_MULTILINE
-    PUSHBUTTON      "Close",IDCANCEL,334,98,24,9
-    GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,166,104,192,16
-    CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,163,110,55,8
-    CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,258,110,59,8
-    CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,323,110,32,8
-    CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,219,112,35,6
-    PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,227,34,22,11
-    PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,257,34,18,11
-    RTEXT           "",IDSWAP_S,229,25,14,8,0,WS_EX_RIGHT
-    RTEXT           "",IDCOPY_S,259,25,13,8,0,WS_EX_RIGHT
-    PUSHBUTTON      "Redo&,",IDC_REDO,1,44,23,10
-    PUSHBUTTON      "Undo&.",IDC_UNDO,31,44,23,10
+	RTEXT           "&Find",IDFINDWHAT_STATIC,1,14,13,8
+	COMBOBOX        IDFINDWHAT,15,13,287,214,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_DISABLENOSCROLL | WS_VSCROLL | WS_TABSTOP
+	RTEXT           "R&eplace",ID_STATICTEXT_REPLACE,1,30,25,8
+	COMBOBOX        IDREPLACEWITH,26,28,199,50,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+	RTEXT           "Filter",IDD_FINDINFILES_FILTERS_STATIC,1,45,15,10,SS_NOTIFY
+	COMBOBOX        IDD_FINDINFILES_FILTERS_COMBO,16,43,161,114,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+	LTEXT           "On",IDD_FINDINFILES_DIR_STATIC,1,59,10,8
+	COMBOBOX        IDD_FINDINFILES_DIR_COMBO,11,57,336,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+	PUSHBUTTON      "...",IDD_FINDINFILES_BROWSE_BUTTON,348,57,10,12
+	CONTROL         "In working dir.",IDD_FINDINFILES_FOLDERFOLLOWSDOC_CHECK,
+						"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,73,57,9
+	CONTROL         "In all sub&-dir.",IDD_FINDINFILES_RECURSIVE_CHECK,
+						"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,85,51,8
+	CONTROL         "In hidden",IDD_FINDINFILES_INHIDDENDIR_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,168,96,41,9
+	CONTROL         "Bookmark line",IDC_MARKLINE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,88,50,57,13
+	CONTROL         "Purge first",IDC_PURGE_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,50,44,11
+	PUSHBUTTON      "Mark All",IDCMARKALL,309,12,47,12
+	PUSHBUTTON      "Clear All",IDC_CLEAR_ALL,309,25,47,12
+	CONTROL         "Backward",IDC_BACKWARDDIRECTION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,62,43,13
+	CONTROL         "&Match whole word",IDWHOLEWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,2,76,69,11
+	CONTROL         "Match &case",IDMATCHCASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,87,76,48,11
+	CONTROL         "&Wrap over",IDWRAP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,87,63,53,11
+	GROUPBOX        "Mode",IDC_MODE_STATIC,2,91,147,29
+	CONTROL         "&Normal",IDNORMAL,"Button",BS_AUTORADIOBUTTON | WS_GROUP,25,98,35,8
+	CONTROL         "E&xtended \\n \\t \\0 \\x..",IDEXTENDED,"Button",BS_AUTORADIOBUTTON,64,98,83,8
+	CONTROL         "Regu&lar expression",IDREGEXP,"Button",BS_AUTORADIOBUTTON,5,109,74,9
+	CONTROL         "&Dot matches all",IDREDOTMATCHNL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,83,109,64,9
+	CONTROL         "",IDC_2_BUTTONS_MODE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,350,2,8,8
+	PUSHBUTTON      "Find Next",IDOK,307,12,50,12,WS_GROUP
+	PUSHBUTTON      "",IDC_FINDPREV,343,12,15,12,BS_MULTILINE | WS_GROUP
+	PUSHBUTTON      "",IDC_FINDNEXT,307,12,36,12,BS_MULTILINE | WS_GROUP
+	PUSHBUTTON      "Replace &only",IDREPLACE1,307,26,51,12
+	PUSHBUTTON      "Replace t&hen find",IDREPLACE_FINDNEXT,297,38,61,12,BS_MULTILINE
+	CONTROL         "In selection",IDC_IN_SELECTION_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,147,76,47,9
+	PUSHBUTTON      "Sum&/count",IDCCOUNTALL,154,94,40,11
+	PUSHBUTTON      "Clear=>",IDC_CLEAR_FINDALL_CURRENTFILE,219,59,30,10
+	PUSHBUTTON      "Find &All",IDC_FINDALL_CURRENTFILE,249,59,44,10,BS_MULTILINE
+	PUSHBUTTON      "Clear&=>",IDC_CLEAR_FINDALL_OPENEDFILES,219,69,30,10
+	PUSHBUTTON      "F&ind All in All Opened Documents",IDC_FINDALL_OPENEDFILES,249,69,44,26,BS_MULTILINE
+	PUSHBUTTON      "Re&place All",IDREPLACEALL,296,50,33,19,BS_MULTILINE
+	PUSHBUTTON      "=>  Sa&ve",IDREPLACEALL_SAVE,329,50,29,19,BS_MULTILINE
+	PUSHBUTTON      "Replace All in All Opened Doc&uments",IDC_REPLACE_OPENEDFILES,296,69,62,26,BS_MULTILINE
+	PUSHBUTTON      "Clear&;",IDD_FINDINFILES_CLEAR_FIND,326,12,32,10,BS_MULTILINE
+	PUSHBUTTON      "Find All",IDD_FINDINFILES_FIND_BUTTON,326,23,32,12,BS_MULTILINE | WS_GROUP
+	PUSHBUTTON      "&Replace All",IDD_FINDINFILES_REPLACEINFILES,326,36,32,19,BS_MULTILINE
+	PUSHBUTTON      "Close",IDCANCEL,334,98,24,9
+	GROUPBOX        "",IDC_TRANSPARENT_GRPBOX,166,104,192,16
+	CONTROL         "Transparency",IDC_TRANSPARENT_CHECK,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,163,110,55,8
+	CONTROL         "On losing focus",IDC_TRANSPARENT_LOSSFOCUS_RADIO,"Button",BS_AUTORADIOBUTTON | WS_GROUP | WS_TABSTOP,258,110,59,8
+	CONTROL         "Always",IDC_TRANSPARENT_ALWAYS_RADIO,"Button",BS_AUTORADIOBUTTON,323,110,32,8
+	CONTROL         "",IDC_PERCENTAGE_SLIDER,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | NOT WS_VISIBLE | WS_TABSTOP,219,112,35,6
+	PUSHBUTTON      "swi&tch",IDC_FIND_REPLACE_SWAP,227,34,22,11
+	PUSHBUTTON      "cop&y",IDC_FIND_REPLACE_COPY,257,34,18,11
+	RTEXT           "",IDSWAP_S,229,25,14,8,0,WS_EX_RIGHT
+	RTEXT           "",IDCOPY_S,259,25,13,8,0,WS_EX_RIGHT
+	PUSHBUTTON      "Redo&,",IDC_REDO,1,44,23,10
+	PUSHBUTTON      "Undo&.",IDC_UNDO,31,44,23,10
 END
 
 IDB_INCREMENTAL_BG          BITMAP                  "../icons/incrementalBg.bmp"
@@ -127,17 +127,17 @@ EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Find in found results"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    RTEXT           "&Find what :",IDFINDWHAT_STATIC_FIFOLDER,6,22,75,8
-    COMBOBOX        IDFINDWHAT_FIFOLDER,83,20,178,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
+	RTEXT           "&Find what :",IDFINDWHAT_STATIC_FIFOLDER,6,22,75,8
+	COMBOBOX        IDFINDWHAT_FIFOLDER,83,20,178,150,CBS_DROPDOWN | CBS_AUTOHSCROLL | WS_TABSTOP
 	CONTROL         "Search only in found lines",IDC_MATCHLINENUM_CHECK_FIFOLDER,"Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,12,66,99,16
 	CONTROL         "Match &whole word only",IDWHOLEWORD_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,88,140,15
-    CONTROL         "Match &case",IDMATCHCASE_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,100,140,15
+	CONTROL         "Match &case",IDMATCHCASE_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,100,140,15
 
-    GROUPBOX        "Search Mode",IDC_MODE_STATIC_FIFOLDER,6,131,159,48
-    CONTROL         "&Normal",IDNORMAL_FIFOLDER,"Button",BS_AUTORADIOBUTTON | WS_GROUP,12,143,126,10
-    CONTROL         "E&xtended (\\n, \\r, \\t, \\0, \\x...)",IDEXTENDED_FIFOLDER, "Button",BS_AUTORADIOBUTTON,12,155,145,10
-    CONTROL         "Re&gular expression",IDREGEXP_FIFOLDER,"Button",BS_AUTORADIOBUTTON,12,167,78,10
+	GROUPBOX        "Search Mode",IDC_MODE_STATIC_FIFOLDER,6,131,159,48
+	CONTROL         "&Normal",IDNORMAL_FIFOLDER,"Button",BS_AUTORADIOBUTTON | WS_GROUP,12,143,126,10
+	CONTROL         "E&xtended (\\n, \\r, \\t, \\0, \\x...)",IDEXTENDED_FIFOLDER, "Button",BS_AUTORADIOBUTTON,12,155,145,10
+	CONTROL         "Re&gular expression",IDREGEXP_FIFOLDER,"Button",BS_AUTORADIOBUTTON,12,167,78,10
 	CONTROL         "&. matches newline",IDREDOTMATCHNL_FIFOLDER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,93,167,68,9
-    PUSHBUTTON      "Find All",IDOK,268,20,90,14,WS_GROUP
+	PUSHBUTTON      "Find All",IDOK,268,20,90,14,WS_GROUP
 	PUSHBUTTON      "Close",IDCANCEL,268,38,90,14
 END
