--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -24,8 +24,6 @@
 // You should have received a copy of the GNU General Public License
 // along with this program; if not, write to the Free Software
 // Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-
-
 #include <windows.h>
 #include "resource.h"
 #include "menuCmdID.h"
@@ -248,9 +246,9 @@ BEGIN
 		MENUITEM "Rename...",                        IDM_FILE_RENAME
 		MENUITEM "&Close",                           IDM_FILE_CLOSE
 		MENUITEM "Clos&e All",                       IDM_FILE_CLOSEALL
-		POPUP "Close More"
+		POPUP "Close All..."
 		BEGIN
-				MENUITEM "Close All but Active Document",    IDM_FILE_CLOSEALL_BUT_CURRENT
+				MENUITEM "Close All but this Active Doc.",    IDM_FILE_CLOSEALL_BUT_CURRENT
 				MENUITEM "Close All to the Left",            IDM_FILE_CLOSEALL_TOLEFT
 				MENUITEM "Close All to the Right",           IDM_FILE_CLOSEALL_TORIGHT
 				MENUITEM "Close All Unchanged",              IDM_FILE_CLOSEALL_UNCHANGED
