bugfix, add line margin of unallowed zone

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -410,8 +410,8 @@ BEGIN
 		MENUITEM SEPARATOR
 		MENUITEM "&Go to...",                   IDM_SEARCH_GOTOLINE
 		MENUITEM "Go to the Matching Brace",        IDM_SEARCH_GOTOMATCHINGBRACE
-		MENUITEM "Select in Brace Pair Inclusively", IDM_SEARCH_SELECTMATCHINGBRACES
-		MENUITEM "Select in Brace Pair Exclusively", IDM_SEARCH_SELECTMATCHBRACEX
+		MENUITEM "Select Brace Pair Inclusively", IDM_SEARCH_SELECTMATCHINGBRACES
+		MENUITEM "Select Brace Pair Exclusively", IDM_SEARCH_SELECTMATCHBRACEX
 		MENUITEM SEPARATOR
 		MENUITEM "Mar&k...",                    IDM_SEARCH_MARK
 
@@ -511,7 +511,7 @@ BEGIN
 				MENUITEM "Move Tab Backward",       IDM_VIEW_TAB_MOVEBACKWARD
 		END
 		MENUITEM "Word wrap",                   IDM_VIEW_WRAP
-		MENUITEM "Focus on Another View",         IDM_VIEW_SWITCHTO_OTHER_VIEW
+		MENUITEM "Focus to Another View",         IDM_VIEW_SWITCHTO_OTHER_VIEW
 		MENUITEM "Hide Lines",                  IDM_VIEW_HIDELINES
 		MENUITEM SEPARATOR
 		MENUITEM "Fold/Unfold This Level",      IDM_VIEW_TOGGLE_FOLDCURRENT
@@ -551,8 +551,9 @@ BEGIN
 		MENUITEM "Document Map",          IDM_VIEW_DOC_MAP
 		MENUITEM "Show/Hide Function List",         IDM_VIEW_FUNC_LIST
 		MENUITEM "Show/Hide Character Panel",        IDM_VIEW_CHAR_PANEL
-		MENUITEM "Show/Hide Line Number",IDM_VIEW_LINENUMBER
 		MENUITEM "Show/Hide Find Result",       IDM_VIEW_FIND_RESULT
+		MENUITEM "Show/Hide Line Number",IDM_VIEW_LINENUMBER
+		MENUITEM "Set cursor line visibility",   IDM_VIEW_CR_LINE_BG
 		MENUITEM SEPARATOR
 		MENUITEM "Synchronize Vertical Scrolling",      IDM_VIEW_SYNSCROLLV
 		MENUITEM "Synchronize Horizontal Scrolling",    IDM_VIEW_SYNSCROLLH
@@ -1053,22 +1054,24 @@ BEGIN
 	PUSHBUTTON   "N&o to all",IDIGNORE,240,60,60,14,BS_FLAT
 END
 
-IDD_GOLINE DIALOGEX 26, 41, 261, 88
+IDD_GOLINE DIALOGEX 41, 41, 255, 88
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_WINDOWEDGE
 CAPTION "Go To..."
-FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x0
+FONT 9, TEXT("MS Shell Dlg"), 0, 0, 0x0
 BEGIN
-	CONTROL         "&Line",IDC_RADIO_GOTOLINE,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,5,9,80,10
-	CONTROL         "&Offset",IDC_RADIO_GOTOOFFSET,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,98,9,80,10
-	LTEXT           "You are here :",ID_URHERE_STATIC,5,34,95,8,NOT WS_GROUP
-	LTEXT           "0123456789",ID_CURRLINE,100,34,45,8,NOT WS_GROUP
-	LTEXT           "You want to &go to :",ID_UGO_STATIC,5,51,95,8
-	EDITTEXT        ID_GOLINE_EDIT,98,49,71,12,ES_NUMBER
-	LTEXT           "You can't go further than :",ID_NOMORETHAN_STATIC,5,68,92,8,NOT WS_GROUP
-	LTEXT           "0123456789",ID_LASTLINE,100,68,45,8,NOT WS_GROUP
-	DEFPUSHBUTTON   "Go",IDOK,181,48,70,14,BS_NOTIFY
-	PUSHBUTTON      "I'm going nowhere",IDCANCEL,181,66,70,14,BS_NOTIFY
+	LTEXT           "Line        Offset",ID_URHERE_STATIC,83,5,57,7,NOT WS_GROUP
+	LTEXT           "Caret is at:",ID_URHERE_STATIC,5,17,79,8,NOT WS_GROUP
+	LTEXT           "0123456789",ID_CURRLINE,83,15,43,8,NOT WS_GROUP
+	LTEXT           "0123456789",ID_CUROFFSET,116,15,45,8,NOT WS_GROUP
+	LTEXT           "Move it to:",ID_UGO_STATIC,5,29,49,8
+	EDITTEXT        ID_GOLINE_EDIT,83,27,49,12,ES_NUMBER
+	CONTROL         "&Line",IDC_RADIO_GOTOLINE,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,83,45,41,10
+	CONTROL         "&Offset",IDC_RADIO_GOTOOFFSET,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,117,45,47,10
+	LTEXT           "Maximum limit:",ID_NOMORETHAN_STATIC,5,68,51,8,NOT WS_GROUP
+	LTEXT           "0123456789",ID_LASTLINE,83,68,35,8,NOT WS_GROUP
+	LTEXT           "0123456789",ID_LASTOFF,117,68,35,8,NOT WS_GROUP
+	DEFPUSHBUTTON   "Go",IDOK,198,66,47,14,BS_NOTIFY
 END
 
 IDD_VALUE_DLG DIALOGEX 0, 0, 83, 27
