add Walk through View's focus in a single shotrtcut key

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -511,7 +511,7 @@ BEGIN
 				MENUITEM "Move Tab Backward",       IDM_VIEW_TAB_MOVEBACKWARD
 		END
 		MENUITEM "Word wrap",                   IDM_VIEW_WRAP
-		MENUITEM "Focus to Another View",         IDM_VIEW_SWITCHTO_OTHER_VIEW
+		MENUITEM "Focus through Views",         IDM_VIEW_FOCUS_THRU_EACH
 		MENUITEM "Hide Lines",                  IDM_VIEW_HIDELINES
 		MENUITEM SEPARATOR
 		MENUITEM "Fold/Unfold This Level",      IDM_VIEW_TOGGLE_FOLDCURRENT
@@ -553,7 +553,7 @@ BEGIN
 		MENUITEM "Show/Hide Character Panel",        IDM_VIEW_CHAR_PANEL
 		MENUITEM "Show/Hide Find Result",       IDM_VIEW_FIND_RESULT
 		MENUITEM "Show/Hide Line Number",IDM_VIEW_LINENUMBER
-		MENUITEM "Set cursor line visibility",   IDM_VIEW_CR_LINE_BG
+		MENUITEM "Set Current Line Highlight",   IDM_VIEW_CR_LINE_BG
 		MENUITEM SEPARATOR
 		MENUITEM "Synchronize Vertical Scrolling",      IDM_VIEW_SYNSCROLLV
 		MENUITEM "Synchronize Horizontal Scrolling",    IDM_VIEW_SYNSCROLLH
@@ -1060,17 +1060,17 @@ EXSTYLE WS_EX_TOOLWINDOW | WS_EX_WINDOWEDGE
 CAPTION "Go To..."
 FONT 9, TEXT("MS Shell Dlg"), 0, 0, 0x0
 BEGIN
-	LTEXT           "Line        Offset",ID_URHERE_STATIC,83,5,57,7,NOT WS_GROUP
+	LTEXT           "Line        Offset",ID_TITLE_STATIC,83,4,57,7,NOT WS_GROUP
 	LTEXT           "Caret is at:",ID_URHERE_STATIC,5,17,79,8,NOT WS_GROUP
 	LTEXT           "0123456789",ID_CURRLINE,83,15,43,8,NOT WS_GROUP
 	LTEXT           "0123456789",ID_CUROFFSET,116,15,45,8,NOT WS_GROUP
 	LTEXT           "Move it to:",ID_UGO_STATIC,5,31,46,8
 	EDITTEXT        ID_GOLINE_EDIT,83,29,49,12,ES_NUMBER
 	CONTROL         "&Line",IDC_RADIO_GOTOLINE,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,83,45,33,10
-	CONTROL         "&Offset",IDC_RADIO_GOTOOFFSET,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,117,45,37,10
+	CONTROL         "&Offset",IDC_RADIO_GOTOOFFSET,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,116,45,37,10
 	LTEXT           "Maximum limit:",ID_NOMORETHAN_STATIC,5,68,51,8,NOT WS_GROUP
 	LTEXT           "0123456789",ID_LASTLINE,83,68,35,8,NOT WS_GROUP
-	LTEXT           "0123456789",ID_LASTOFF,117,68,35,8,NOT WS_GROUP
+	LTEXT           "0123456789",ID_LASTOFF,118,68,35,8,NOT WS_GROUP
 	DEFPUSHBUTTON   "Go",IDOK,198,66,47,14,BS_NOTIFY
 END
 
